spacing corrections

--- a/sass/modules/_landingpage.scss
+++ b/sass/modules/_landingpage.scss
@@ -419,6 +419,16 @@ a.next {
     padding-right: 30px;
     padding-left: 30px;
   }
+  
+  .lp-hero2 .image {
+    width: 60%;
+  }
+  
+  .lp-hero2 .textcont {
+    width: 35%;
+    margin-right: 5%;
+  }
+  
 }
 
 @media (max-width: 850px) {
@@ -439,11 +449,43 @@ a.next {
   }
 }
 
+@media (max-width: 800px) {
+  .lp-hero2 .image {
+    width: 100%;
+    display: block;
+  }
+  
+  .lp-hero2 .textcont {
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+  
+  .lp-hero2 {
+    padding-bottom: 40px;
+  }
+}
+
+
+
+
+
+
+
+
 @media (max-width: 550px) {
   .previous-card {
     width: calc(100% - 62px);
     float: none;
     margin-bottom: 30px;
+  }
+  
+  .lp-hero2 .image {
+    height: 350px;
+  }
+  
+  .lp-hero2 {
+    padding-bottom: 80px;
   }
 }
 
@@ -453,6 +495,14 @@ a.next {
     float: none;
     margin-bottom: 30px;
     min-height: 300px;
+  }
+  
+  .lp-hero2 .image {
+    height: 250px;
+  }
+  
+  .lp-hero2 {
+    padding-bottom: 80px;
   }
 }
 
